Review comments Oct 7.